feat(front):manage deploy error

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/lodash": "^4.17.7",
     "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20.14.5",
+    "@types/vue": "^2.0.0",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^13.0.0",
